modificando nombre de los login

--- a/seleccion_Usuario.html
+++ b/seleccion_Usuario.html
@@ -46,7 +46,7 @@
 
         <!--Boton Adulto Mayor-->
         <div class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
-            <a href="login_Adulto_Mayor.html " style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
+            <a href="LoginAM.html " style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
                         <img class="img-fluid " src="Img/ancianos.png " alt=" ">
@@ -60,14 +60,14 @@
             </a>
         </div>
 
-        <a href="login_Adulto_Mayor.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="LoginAM.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 " href="login_Adulto_Mayor.html ">
                         <img class="img-fluid " src="Img/ancianos.png " alt=" ">
                     </button>
                 </div>
-                <button href="login_Adulto_Mayor.html " type="button " class="btn btn-secondary ">
+                <button href="LoginAM.html " type="button " class="btn btn-secondary ">
                     <h3 class="text-center ">Adulto Mayor</h3>
                 </button>
             </div>
@@ -103,7 +103,7 @@
         </a>
 
         <!--Boton Militar-->
-        <a href="login_Militar.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
+        <a href="LoginML.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -117,7 +117,7 @@
             </div>
         </a>
 
-        <a href="login_Militar.html " style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="LoginML.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
