commit en registro

--- a/Registro_Personal_Médico.html
+++ b/Registro_Personal_Médico.html
@@ -166,8 +166,8 @@
                 <div class="col-12 mb-4">
                     <!-- cabecera -->
                     <div class="row mt-4 border-bottom">
-                        <h3 class="font-weight-bold d-none d-sm-flex "> Asignación Turno Personal Médico </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none "> Asignación Turno Personal Médico </h4>
+                        <h3 class="font-weight-bold d-none d-sm-flex "> Asignación de Turno a Personal Médico </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none "> Asignación de Turno a Personal Médico </h4>
                     </div>
                     <!-- Formulario -->
                     <!-- Fila 1 -->
