--- a/ReporteML.html
+++ b/ReporteML.html
@@ -21,12 +21,10 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
                 <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
 
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
                 <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -38,10 +36,9 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-tercero">
         <div class="col-lg-12 d-inline-flex">
-            <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i
-                    class=" p-1 fas fa-lg fa-bars"></i></button>
-            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Adulto Mayor </h3>
-            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Adulto Mayor </h4>
+            <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i class=" p-1 fas fa-lg fa-bars"></i></button>
+            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Militar </h3>
+            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Militar </h4>
         </div>
     </nav>
 
@@ -51,15 +48,14 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
+                <a href="PanelPM.html" class="list-group-item list-group-item-action bg-light ">
+                    <i class="fas fa-user"></i> Información Personal y Turnos</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light ">
-                    <i class="fas fa-download"></i> Descargar</a>
                 <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-sign-out-alt"></i> Salir</a>
-
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -72,10 +68,8 @@
                 <div class="col-12 ">
                     <div class="row mt-4">
 
-                        <h3 class="font-weight-bold d-none d-sm-flex"> Reporte de Turno de Vacunación contra COVID - 19
-                        </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none"> Reporte de Turno de Vacunación contra COVID - 19
-                        </h4>
+                        <h3 class="font-weight-bold d-none d-sm-flex"> Reporte de Turno de Vacunación contra COVID - 19 </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none"> Reporte de Turno de Vacunación contra COVID - 19 </h4>
                         <table class="table table-bordered mt-4">
                             <tbody>
                                 <tr>
@@ -173,7 +167,7 @@
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
-        $("#menu-toggle").click(function (e) {
+        $("#menu-toggle").click(function(e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
