--- a/RegistroPM.html
+++ b/RegistroPM.html
@@ -49,16 +49,46 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
+            <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
+                
+                <!-- Informacion Personal y Turnos -->    
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-user"></i></div>
+                    <div class="col-10">Información Personal y Turnos</div>
+                    </div>
+                </a>
+                    
+                <!-- Consultar fecha de vacunacion -->    
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-question"></i></div>
+                    <div class="col-10">Consultar fecha de Vacunación</div>
+                    </div>
+                </a>
+                <!-- Consultar fecha de vacunacion -->
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-file-signature"></i></div>
+                    <div class="col-10">Consultar fecha de Vacunación</div>
+                    </div>
+                </a>
+
+                <!-- Registrar Personal de vacunación -->
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
-                    <i class="fas fa-user"></i> Información Personal y Turnos</a>
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-user-plus"></i></div>
+                    <div class="col-10">Registrar personal de vacunación</div>
+                    </div>
+                </a>
+                <!-- Salir -->
                 <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
-                <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
-                    <i class="fas fa-sign-out-alt"></i> Salir</a>
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
+                    <div class="col-10">Salir</div>
+                    </div>
+                </a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -131,7 +161,7 @@
                     <div class="row mt-4">
                         <div class="col-10">
                             <div class="row">
-                                   <p>Direccion: </p>
+                                   <p>Dirección: </p>
                             </div>
                             <div class="row">
                                 <input type="text" class="form-control form-control-lg" placeholder="Calle, Jiron o Avenida"
@@ -228,10 +258,10 @@
                     <div class="row mt-4">
                         <div class="col-10">
                             <div class="row">
-                                   <p>Direccion: </p>
+                                   <p>Dirección: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jiron o Avenida"
+                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jirón o Avenida"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
@@ -244,13 +274,13 @@
                                    <p>Pabellón: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Pabellón C"
+                                <input type="text" class="form-control form-control-lg" placeholder="Pabellón "
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
                         <div class="col-6 ">
                             <div class="row">
-                                   <p>Codigo Institución: </p>
+                                   <p>Código de Institución: </p>
                             </div>
                             <div class="row">
                                 <input type="text" class="form-control form-control-lg" placeholder="código institución"
