--- a/RegistroML.html
+++ b/RegistroML.html
@@ -71,7 +71,7 @@
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                     <div class="col-2"><i class="fas fa-file-signature"></i></div>
-                    <div class="col-10">Consultar fecha de Vacunación</div>
+                    <div class="col-10">Solicitar cambio de turno</div>
                     </div>
                 </a>
 
