--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto ">
                     <a href="https://www.gob.pe/minsa/ ">
-                        <img class="img-fluid rounded border " src="Img/MINSA-LOGO.jpg " alt=" ">
+                        <img class="img-fluid rounded border " src="/Img/MINSA-LOGO.jpg " alt=" ">
                     </a>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <a href="LoginAM.html " style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid " src="Img/ancianos.png " alt=" ">
+                        <img class="img-fluid " src="/Img/ancianos.png " alt=" ">
                     </button>
                 </div>
                 <button type="button " class="btn btn-secondary justify-content-center ">
@@ -64,7 +64,7 @@
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 " href="login_Adulto_Mayor.html ">
-                        <img class="img-fluid " src="Img/ancianos.png " alt=" ">
+                        <img class="img-fluid " src="/Img/ancianos.png " alt=" ">
                     </button>
                 </div>
                 <button href="LoginAM.html " type="button " class="btn btn-secondary ">
@@ -78,7 +78,7 @@
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid " src="Img/doctor.png " alt=" ">
+                        <img class="img-fluid " src="/Img/doctor.png " alt=" ">
                     </button>
                 </div>
 
@@ -92,7 +92,7 @@
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid " src="Img/doctor.png " alt=" ">
+                        <img class="img-fluid " src="/Img/doctor.png " alt=" ">
                     </button>
                 </div>
 
@@ -107,7 +107,7 @@
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid "  src="Img/soldado.png " alt=" ">
+                        <img class="img-fluid "  src="/Img/soldado.png " alt=" ">
                     </button>
                 </div>
 
@@ -121,7 +121,7 @@
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid "  src="Img/soldado.png " alt=" ">
+                        <img class="img-fluid "  src="/Img/soldado.png " alt=" ">
                     </button>
                 </div>
 
