--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 
         <!--Boton Adulto Mayor-->
         <div class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
-            <a href="LoginAM.html " style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
+            <a href="login-adulto.html" style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
                         <img class="img-fluid " src="/Img/ancianos.png " alt=" ">
@@ -60,7 +60,7 @@
             </a>
         </div>
 
-        <a href="LoginAM.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="login-adulto.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 " href="login_Adulto_Mayor.html ">
@@ -74,7 +74,7 @@
         </a>
 
         <!--Boton Personal Salud -->
-        <a href="LoginPM.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
+        <a href="login-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -88,7 +88,7 @@
             </div>
         </a>
 
-        <a href="LoginPM.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="login-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -103,7 +103,7 @@
         </a>
 
         <!--Boton Militar-->
-        <a href="LoginML.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
+        <a href="login-militar.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -117,7 +117,7 @@
             </div>
         </a>
 
-        <a href="LoginML.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="login-militar.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
