--- a/PreguntaAM.html
+++ b/PreguntaAM.html
@@ -64,7 +64,7 @@
                 class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
-                        <img class="img-fluid " src="Img/vacuna.svg" alt=" ">
+                        <img class="img-fluid " src="Img/vacuna.png" alt=" ">
                     </button>
                 </div>
                 <button type="button " class="btn btn-secondary justify-content-center ">
@@ -81,7 +81,7 @@
                 aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 " href="login_Adulto_Mayor.html ">
-                        <img class="img-fluid " src="Img/vacuna.svg" alt=" ">
+                        <img class="img-fluid " src="Img/vacuna.png" alt=" ">
                     </button>
                 </div>
                 <button type="button " class="btn btn-secondary ">
