--- a/question-adulto.html
+++ b/question-adulto.html
@@ -75,8 +75,8 @@
             </a>
         </div>
 
-        <a href="RegistroAM.html" style="text-decoration:none "
-            class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="RegistroAM.html" style="text-decoration:none"
+            class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center align-items-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group "
                 aria-label="Basic example ">
                 <div class="boton1 ">
