--- a/login-militar.html
+++ b/login-militar.html
@@ -107,11 +107,11 @@
 
                 <div class="form-row text-center mb-3 justify-content-between align-items-center mt-5">
                     <div class="col">
-                        <button class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
-                            Ingresar</button>
+                        <a href="report-militar.html" class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
+                            Ingresar</a>
                     </div>
                     <div class="col">
-                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto">
+                        <a href="home.html" class="btn btn-lg btn-secondary ml-auto">
                             <i class="fas fa-window-close"></i> Cancelar</a>
                     </div>
                 </div>
