--- a/report-adulto.html
+++ b/report-adulto.html
@@ -70,40 +70,92 @@
             <div class="container ">
 
                 <div class="col-12 ">
-                    <div class="row mt-4">
 
-                        <h3 class="font-weight-bold d-none d-sm-flex"> Reporte de Turno de Vacunación contra COVID - 19
-                        </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none"> Reporte de Turno de Vacunación contra COVID - 19
-                        </h4>
-                        <table class="table table-bordered mt-4">
+                    <!-- cabecera 1 -->
+                    <div class="row mt-4 border-bottom">
+                        <h3 class="font-weight-bold d-none d-sm-flex "> Información General </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none "> Información General </h4>
+                    </div>
+                    <!-- Informacion General -->
+                    <div class="accordion-item__container mt-4 ">
+                        <table class="table" style="font-size: 15px">
                             <tbody>
+
                                 <tr>
-                                    <th scope="row">Fecha de vacunación</th>
-                                    <td>13/02/2021</td>
+                                    <td class="text-center">
+                                        <i class="fa fa-calendar"></i>
+                                    </td>
+                                    <td>
+                                        <strong>FECHA DE VACUNACIÓN</strong>
+                                    </td>
+                                    <td>
+                                        <span>Alexander Robles</span>
+                                    </td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">Lugar de vacunación</th>
-                                    <td>Hospital Aquiles Matto</td>
+                                    <td class="text-center">
+                                        <i class="fa fa-hospital"></i>
+                                    </td>
+                                    <td>
+                                        <strong>LUGAR DE VACUNACIÓN</strong>
+                                    </td>
+                                    <td>
+                                        HOSPITAL AQUILES MATO
+                                    </td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">Pabellón</th>
-                                    <td>5 C</td>
+                                    <td class="text-center">
+                                        <i class="fa fa-hospital"></i>
+                                    </td>
+                                    <td>
+                                        <strong>PABELLÓN</strong>
+                                    </td>
+                                    <td>
+                                        5C
+                                    </td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">Horario de atención</th>
-                                    <td>8:00 - 10:00 a.m</td>
+                                    <td class="text-center">
+                                        <i class="fa fa-map-marker"></i>
+                                    </td>
+                                    <td>
+                                        <strong>DEPARTAMENTO/PROVINCIA/DISTRITO</strong>
+                                    </td>
+                                    <td>
+                                        LIMA / LIMA / COMAS
+                                    </td>
                                 </tr>
+
+                                <tr>
+                                    <td class="text-center">
+                                        <i class="fa fa-map-marker"></i>
+                                    </td>
+                                    <td>
+                                        <strong>DIRECCIÓN</strong>
+                                    </td>
+                                    <td>
+                                        AV. BRASIL 366
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="text-center">
+                                        <i class="fa fa-clock"></i>
+                                    </td>
+                                    <td>
+                                        <strong>HORARIO DE ATENCIÓN</strong>
+                                    </td>
+                                    <td>
+                                        <span>8:00-12:00</span>
+                                    </td>
+                                </tr>
+
                             </tbody>
                         </table>
-
                     </div>
-
-
-
 
                 </div>
 
