--- a/form-medico.html
+++ b/form-medico.html
@@ -23,10 +23,10 @@
         <div class="container">
             <a href="#" class="navbar-brand">
                 <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
-                <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
+                <h3 class="d-none d-lg-inline-flex ml-3">Administrador</h3>
 
                 <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
-                <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
+                <h4 class="d-lg-none d-inline-flex ml-3">Administrador</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
                 <a href="https://www.gob.pe/minsa/">
@@ -40,8 +40,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-tercero">
         <div class="col-lg-12 d-inline-flex">
             <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i class=" p-1 fas fa-lg fa-bars"></i></button>
-            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Personal Médico </h3>
-            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Personal Médico </h4>
+            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Administrador</h3>
+            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Administrador </h4>
         </div>
     </nav>
 
@@ -67,13 +67,13 @@
                     <div class="col-10">Consultar fecha de Vacunación</div>
                     </div>
                 </a>
-                <!-- Consultar fecha de vacunacion -->
+                <!-- Cambio de turno
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                     <div class="col-2"><i class="fas fa-file-signature"></i></div>
                     <div class="col-10">Solicitar cambio de turno</div>
                     </div>
-                </a>
+                </a>-->
 
                 <!-- Registrar Personal de vacunación -->
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
@@ -106,29 +106,29 @@
                     <!-- Fila 1 -->
                     <div class="row mt-4">
 
-                            <div class="col-6 mr-2">
+                            <div class="col-5 mr-2">
                                 <div class="row">
-                                       <p>Nombre completo: </p>
+                                       <p>Nombres:</p>
                                 </div>
                                 <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Nombre y Apellidos"
+                                    <input type="text" class="form-control form-control-lg" placeholder="Nombres"
                                     aria-describedby="inputGroupPrepend1"required>
                                 </div>
                             </div>
 
-                            <div class="col-4">
+                            <div class="col-5">
                                 <div class="row">
-                                       <p>DNI: </p>
+                                       <p>Apellidos: </p>
                                 </div>
                                 <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Número DNI"
+                                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos"
                                     aria-describedby="inputGroupPrepend1"required>
                                 </div>
                             </div>
                     </div>
                     <!-- Fila 2 -->
                     <div class="row mt-4">
-                        <div class="col-3 mr-2">
+                        <div class="col-5 mr-2">
                             <div class="row">
                                    <p>Departamento: </p>
                             </div>
@@ -137,7 +137,7 @@
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                        <div class="col-3 mr-2">
+                        <div class="col-5">
                             <div class="row">
                                    <p>Provincia: </p>
                             </div>
@@ -145,17 +145,7 @@
                                 <input type="text" class="form-control form-control-lg" placeholder="Provincia"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="row">
-                                   <p>Distrito: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Distrito"
-                                aria-describedby="inputGroupPrepend1"required>  
-                            </div>
-                        </div>
-                    
+                        </div>                   
                     </div>
                     <!-- Fila 3 -->
                     <div class="row mt-4">
