--- a/report-adulto.html
+++ b/report-adulto.html
@@ -68,11 +68,13 @@
         <div id="page-content-wrapper">
 
             <div class="container ">
+<div class="row m-2">
+
 
                 <div class="col-12 ">
 
                     <!-- cabecera 1 -->
-                    <div class="row mt-4 border-bottom">
+                    <div class="row border-bottom">
                         <h3 class="font-weight-bold d-none d-sm-flex "> Información General </h3>
                         <h4 class="font-weight-bold d-flex d-sm-none "> Información General </h4>
                     </div>
@@ -89,7 +91,7 @@
                                         <strong>FECHA DE VACUNACIÓN</strong>
                                     </td>
                                     <td>
-                                        <span>Alexander Robles</span>
+                                        <span>13/08/2021</span>
                                     </td>
                                 </tr>
 
@@ -158,7 +160,7 @@
                     </div>
 
                 </div>
-
+            </div>
 
                 <div class="container mt-4 mb-3 text-center">
                     <h5 class="h1 text-danger">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br> ¡NO TE OLVIDES!</h5>
